Introduced InformationRetriever and implemented cascade approach in AdminService for AuthService and more formatting